--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -6,10 +6,12 @@
 <li><a href="#video">Video Introduction</a></li>
 <li><a href="#accounts">Create a User Account</a></li>
 <li><a href="#createstudy">Create a Study</a></li>
-<li><a href="#areas">Adding and Editing Areas</a></li>
+<li><a href="#areas">Adding Areas</a></li>
+<li><a href="#images">Editing Images</a></li>
 <li><a href="#launch">Launching a Study</a></li>
 <li><a href="#voting">Voting</a></li>
 <li><a href="#analyze">Analyze Results</a></li>
+<li><a href="#limits">Limits</a></li>
 </ul>
 </div>
 </div>
@@ -48,8 +50,8 @@ user-generated content. Then, click on Sign Up.</p>
 <ol>
 <li>Click on Public Studies or My Research</li>
 <li>At the bottom of the list of studies, click the Create a New Study button.</li>
-<li>Fill in a name and a description for your study.</li>
-<li>Fill in the Question for Voter.  This is the question you would like study participants to answer, choosing between two photos.</li>
+<li>Fill in a Name and a Description for your study.</li>
+<li>Fill in the Question for Voter.  This is the question you would like study participants to answer while choosing between two photos.</li>
 <li>Select whether or not you would like to Share your Research.  This cannot be changed once the study is created.</li>
 <li>Click on Create Study.</li>
 <li>A confirmation message will pop up indicating that your study has been successfully created and the Add Area 
@@ -57,21 +59,78 @@ form is now visible.  Your study has been created, but isn't much use without im
 to add some areas.</li>
 </ol>
 <p></p>
-<a id="areas"></a><h3>Adding and Editing Areas</h3>
+<a id="areas"></a><h3>Adding Areas</h3>
 <p>Areas are essential to studies.  An Area defines the geographic boundaries within which the application will pull images for a study.</p>
-<p>Users will be directed to add an area immediately after creating a study, but can also access this function through the Curate tab once a study has been created.</p>
+<p>Areas can only be added if there is <a href="http://maps.google.com/help/maps/streetview/learn/where-is-street-view.html">Google StreetView coverage for that area</a>.  
+Users will be directed to add an area immediately after creating a study, but can also access this function through the Curate tab once a study has been created.</p>
 <ol>
-<li>The controls on the Google Map on the right side of the window will allow you to zoom in and out and move around the map (click and drag to move).  
-However, do not single click in the map until you've navigated to the desired area.  (If you accidentally create 
+<li>Fill in a Name and Description for the Area. You can come back and do this after you've drawn the polygon, but *be sure* to do it 
+before you click Save, or you will lose your Area.</li>
+<li>Find the geographic location on the map, using the controls on the Google Map to zoom in and out and move around the map (click and drag to move).  
+Single clicking in the map will begin marking your polygon.  (If you accidentally create 
 a point before you are ready, you can click the Back link at the bottom of the page, and then click on Add Area 
 in the top tabs).</li>
 <li>Once you have located the desired area, we want to draw a polygon.  The study will pull images from inside that space.  Click once in the map to place the first point.</li>
-<li>Click at least two more times to make points for the corners of your polygon.  Keep clicking until the space has been defined.</li>  
-<li>Fill in a name and a description for the area.</li>
+<li>You should see a red flag in the map.  Click at least two more times to make points for the corners of your polygon.  Lines will be drawn between the points and the inside of the polygon will be shaded. 
+Keep clicking until the area you want is completely shaded.</li>  
 <li>Fill in how many images you would like and how far apart they should be.</li>
-<li>At this point, you can click on Save and Return to Study, which will bring you to your study's home page. Or, you can opt to add another area, if you want the study to pull images from multiple areas.</li>
+<li>If you would like to add more than one area, click on Save and Add Another, and repeat the above steps.</li>
+<li>When you have added your last area, click on Save and Return to Study, where you can curate the sets of images.</li>
+</ol>
+<a id="images"></a><h3>Editing Images</h3>
+<p>When you add an Area to a study, it is added to the Curate tab of your study.  Clicking on Curate will give you a dropdown menu 
+of your existing areas, plus a link to Create a New One.</p>
+<ol>
+<li>To edit the images within a study, click on the Study from the My Research page.</li>
+<li>Click the Curate tab, and select the Area you'd like to modify. (Study authors are directed immediately 
+here after adding all the areas to a Study.)</li>
+<li>Click on the image you would like to edit or delete.</li>
+<li>Click and drag in the image to rotate it to the desired view, then click on Save Changes.</li>
+<li>Or, delete the image by clicking on Delete Image and confirming the delete in the pop-up.</li>
 </ol>
 <a id="launch"></a><h3>Launching a Study</h3>
+<p>To view your studies that are not yet launched, first log in, then click on My Research.  The unlaunched 
+studies will be marked with a yellow label.</p>
+<ol>
+<li>Click on the Study Name.</li>
+<li>Make sure everything is set for the study.</li>
+<li>Click the green launch button in the top right corner of the screen.</li>
+<li>Click on Yes, launch my study.</li>
+</ol>
+<p>Once a study has been launched, it is open for voting and you will no longer be able to change the question, add new 
+areas or add, remove, or modify images.  It can be closed and it can be opened again, by clicking on the 
+Close and Open buttons in the top right of the study view tab. </p>
+
 <a id="voting"></a><h3>Voting</h3>
+<p>To vote on a study:</p>
+<ol>
+<li>Click on <a href="">Public Studies</a> and the name of the study you want to open. The study will open on the vote page.</li>
+<li>Click on the image which best answers the question, or you can click on the "Skip" link to skip an image pair.</li>
+<li>Your vote will be recorded as soon as you click and cannot be changed once it is recorded.</li>
+</ol>
+<p>There is also a study featured on the home page and voting works the same way.</p>
 <a id="analyze"></a><h3>Analyze Results</h3>
+<p>There are a variety of ways you can view study results, for your own studies and for those studies with results 
+made public by the authors.  To access the results:</p>
+<ol>
+<li>Go to Public Studies or to My Research.</li>
+<li>Click on the Analyze tab.</li>
+<li>There are four tabs of results*
+<ul><li><strong>Summary</strong> displays each location and how many times it was chosen and the number of times 
+it was offered as a choice.</li>
+<li><strong>Areas</strong> displays each area and how many times an image from that area was chosen over an 
+image from another area. (Note: this is only valid in studies with multiple areas.)</li>
+<li><strong>Heatmap</strong> displays on a map the location of images frequently chosen.</li>
+<li><strong>Download</strong> allows the user to download csv and xls files with the study results.  The Location 
+Summary contains slightly more information than the Summary tab (e.g. heading and pitch of images) while the 
+Full Results include information about the geographic location of the voter and more details about the areas chosen 
+and rejected.</li></ul></li></ol>
+<p>*The Download tab is not available on most smartphones.</p>
+
+<a id="limits"></a><h3>Limits</h3>
+<p>An individual user can only request <a href="https://developers.google.com/maps/documentation/streetview/#usage_limits">25,000 StreetView image requests</a> per 24 hours.  In the highly unlikely case that an individual voter exceeds this limit, the following image will 
+be shown instead of the street image:</p>
+<p><a href="https://developers.google.com/maps/documentation/streetview/#usage_limits">
+<img src="https://developers.google.com/maps/documentation/staticmaps/images/quota.png"></a></p>
+<p>The voter should be able to continue voting from the same computer in 24 hours.</p>
 </div>
