--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,11 +1,13 @@
 <h1>Search Studies</h1>
 
+<div class="search">
 <%= form_tag studies_path, :method => 'get' do %>
   <%= text_field_tag :q, params[:q], :placeholder => 'Search for a study', :autocomplete => 'off'%>
-  <button type="submit" class="btn btn-primary" >
+  <button type="submit" class="btn btn-primary search-button" >
     <i class="icon-search icon-white"></i> Search
   </button>
 <% end %>
+</div>
 <% if @studies.empty? and params[:q].nil? %>
   <p class="empty-text">There are no active studies.
   <% if !user_signed_in? %>
