--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,7 +39,7 @@ technical lead for centralized web development within the College and is also pu
 at the Fisher College of Business.</p>
 <p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with the Ohio State University
 College of Engineering. His duties include software development, web design, systems 
-admiinistration, and consuming the office's excess caffine. You can drop him a line at 
+admiinistration, and consuming the office's excess caffeine. You can drop him a line at 
 <a href="http://www.twitter.com/electrickite">@electrickite</a>.</p>
 <p><strong>Meghan Frazer</strong> is the Digital Resources Curator for the 
 Knowlton School of Architecture at The Ohio State University.  She manages the 
