Added more space above skip link on small screens

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -298,7 +298,10 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   }
   .studyfull {
     display: none;
-    }
+  }
+  .skip-vote-row {
+    margin-top: 2.5em;
+  }
 }
 
 @media (max-width: 480px) {
