--- a/app/views/studies/_analyze_header.html.erb
+++ b/app/views/studies/_analyze_header.html.erb
@@ -5,7 +5,7 @@
 </p>
 <p>
   <strong>Question</strong><br />
-  Which place looks <%= @study.question %>?
+  <%= @study.question %>
 </p>
 
 <h2>Results</h2>
