--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,10 +3,10 @@
 of us experience our cities along its streets. We walk along the sidewalks, bicycle or 
 drive along the streets and ultimately explore our cities via these transportation networks.</p>
 
-<p>Google Streetview allows people to explore places across the world through 360-degree 
-street-level images. Google Streetview provides a great opportunity to study and 
-understand our cities. StreetSeen is a project from Ohio State University which extends 
-Google Streetview in order to allow people across the globe to experiment in evaluating cities.</p>
+<p><a href="http://www.google.com/streetview">Google Street View</a> allows people to explore places across the world through 360-degree 
+street-level images. Google Street View provides a great opportunity to study and 
+understand our cities. StreetSeen is a project from <a href="http://www.osu.edu">The Ohio State University</a> which extends 
+Google Street View in order to allow people across the globe to experiment in evaluating cities.</p>
 
 <p>Visual preference surveys provide the opportunity to see what people think about 
 different places. Visual preferences surveys, originated by Anton Tony Nelessen in the 
@@ -14,7 +14,7 @@ different places. Visual preferences surveys, originated by Anton Tony Nelessen 
 their preference. The best visual preference surveys are precise in what they are seeking 
 to measure. For example, making sure that all of the images are viewed from the same angle.</p>
 
-<p>The great thing about Google Streetview is that the images are 360 degrees making 
+<p>The great thing about Google Street View is that the images are 360 degrees making 
 it fairly simply to rotate images to achieve the same perspective. These are realistic 
 images of what cities are really like. They aren’t doctored fancy pictures. These are 
 quite similar to what you would see if you were exploring a city.</p>
@@ -37,7 +37,7 @@ and the future of the city. You can follow Dr. Evans-Cowley on Twitter
 in the College of Engineering at the The Ohio State University.  He serves as the 
 technical lead for centralized web development within the College and is also pursuing his MBA 
 at the Fisher College of Business.</p>
-<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with the Ohio State University
+<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with The Ohio State University
 College of Engineering. His duties include software development, web design, systems 
 admiinistration, and consuming the office's excess caffeine. You can drop him a line at 
 <a href="http://www.twitter.com/electrickite">@electrickite</a>.</p>
@@ -47,7 +47,7 @@ school archives, the KSA Digital Library, and supports educational technology
 efforts by working on projects like StreetSeen.  Her professional interests include 
 digital content preservation and data visualization. You can send tweets in her 
 direction using <a href="http://www.twitter.com/meghanfrazer">@meghanfrazer</a>.</p>
-<p><strong>Shaun Rowland</strong>, Systems Manager in the Ohio State University Departement of Computer Science & Engineering,
+<p><strong>Shaun Rowland</strong>, Systems Manager in The Ohio State University Department of Computer Science & Engineering,
 also provided support and testing for this project.</p>
 
 <h3>Credits</h3>
