--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,15 +2,15 @@
 <div class="span3">
 <h4>Contents</h4>
 <ul>
-<li><a href="#video">Video Introduction</a></li>
-<li><a href="#accounts">Create a User Account</a></li>
-<li><a href="#createstudy">Create a Study</a></li>
-<li><a href="#areas">Adding Areas</a></li>
-<li><a href="#images">Editing Images</a></li>
-<li><a href="#launch">Launching a Study</a></li>
-<li><a href="#search">Search Existing Studies</a></li>
-<li><a href="#voting">Voting</a></li>
-<li><a href="#analyze">Analyze Results</a></li>
+<li><a href="#video">Video Introduction</a><span class="mobile-divider"> | </span></li>
+<li><a href="#accounts">Create a User Account</a><span class="mobile-divider"> | </span></li>
+<li><a href="#createstudy">Create a Study</a><span class="mobile-divider"> | </span></li>
+<li><a href="#areas">Adding Areas</a><span class="mobile-divider"> | </span></li>
+<li><a href="#images">Editing Images</a><span class="mobile-divider"> | </span></li>
+<li><a href="#launch">Launching a Study</a><span class="mobile-divider"> | </span></li>
+<li><a href="#search">Search Existing Studies</a><span class="mobile-divider"> | </span></li>
+<li><a href="#voting">Voting</a><span class="mobile-divider"> | </span></li>
+<li><a href="#analyze">Analyze Results</a><span class="mobile-divider"> | </span></li>
 <li><a href="#limits">Limits</a></li>
 </ul>
 </div>
