--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -315,14 +315,23 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
       position: relative;
       float: left;
       margin: 5px;
-      }
+    }
     h4 {
       padding-left: 5px;
-      }
+    }
     .mobile-divider {
       display: inline;
-      }
-      }
+    }
+  }
+  .navbar.analyze-options .nav {
+  margin: 0;
+  display: flex;
+  width: 100%;
+  }
+  .navbar.analyze-options .nav li {
+  display: inline;
+  width: 100%
+  }
 }
 
 @media (max-width: 480px) {
