Hiding some columns in Results summary on phone screen

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -332,6 +332,9 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   display: inline;
   width: 100%
   }
+    .resultsfull {
+    display: none;
+    }
 }
 
 @media (max-width: 480px) {
