--- a/app/views/studies/results.html.erb
+++ b/app/views/studies/results.html.erb
@@ -3,9 +3,9 @@
 <table class="table table-striped table-hover">
   <tr>
     <th>Location</th>
-    <th><%= sortable_column "Latitude", :column => "latitude" %></th>
-    <th><%= sortable_column "Longitude", :column => "longitude" %></th>
-    <th><%= sortable_column "Region", :column => "region_name" %></th>
+    <th class="resultsfull"><%= sortable_column "Latitude", :column => "latitude" %></th>
+    <th class="resultsfull"><%= sortable_column "Longitude", :column => "longitude" %></th>
+    <th class="resultsfull"><%= sortable_column "Region", :column => "region_name" %></th>
     <th><%= sortable_column "Times Favored", :column => "chosen" %></th>
     <th><%= sortable_column "Total Votes", :column => "total_votes" %></th>
     <th><%= sortable_column "% Favored", :column => "percent_chosen" %></th>
@@ -14,9 +14,9 @@
     total = location['chosen'].to_i + location['rejected'].to_i -%>
   <tr>
     <td width="150"><a href="/locations/<%= location['location_id'] %>"><img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&location=<%= location['latitude'] %>,<%= location['longitude'] %>&heading=<%= location['heading'] %>&pitch=<%= location['pitch'] %>&sensor=false" /></a></td>
-    <td><%= location['latitude'].to_f.round(5) %></td>
-    <td><%= location['longitude'].to_f.round(5) %></td>
-    <td><%= location['region_name'] %></td>
+    <td class="resultsfull"><%= location['latitude'].to_f.round(5) %></td>
+    <td class="resultsfull"><%= location['longitude'].to_f.round(5) %></td>
+    <td class="resultsfull"><%= location['region_name'] %></td>
     <td><%= location['chosen'].to_i %></td>
     <td><%= total %></td>
     <td><%= (location['chosen'].to_f / (total.nonzero? || 1).to_f * 100).round %> %</td>
