--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,18 @@
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
     <%= favicon_link_tag 'favicon.ico' %>
     <%= yield(:head) %>
+    <% if Rails.env.production? -%>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', '<%= ENV["GOOGLE_TRACKING_ID"] %>']);
+      _gaq.push(['_trackPageview']);    
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();   
+    </script>
+    <% end -%>
   </head>
   <body >
     <div class="navbar navbar-fixed-top">
