--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,8 +1,9 @@
 <p id="notice"><%= notice %></p>
+<h1>Location Detail</h1>
 
 <p>
   <b>Region:</b>
-  <%= @location.region_id %>
+  <%= @location.region.name %>
 </p>
 
 <p>
@@ -25,7 +26,10 @@
   <%= @location.pitch %>
 </p>
 
+<p class="text-right"><%= link_to 'Back', :back %></p>
+
 <div id="streetViewContainer" style="width:100%; height:400px"></div>
+
 <script type="text/javascript">
 window.onload = function() {
   pos = new google.maps.LatLng( <%= @location.latitude %>, <%=  @location.longitude %> );
@@ -42,10 +46,8 @@ window.onload = function() {
       {
           carPos = result.location.latLng;
           heading = google.maps.geometry.spherical.computeHeading( carPos, pos );
-          sv.setPov( { heading: heading, pitch: 0, zoom: 1 } );
+          sv.setPov( { heading: <%= @location.heading %>, pitch: <%= @location.pitch %>, zoom: 1 } );
       }
   } );
 }
 </script>
-<%= link_to 'Edit', edit_location_path(@location) %> |
-<%= link_to 'Back', locations_path %>
