--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <div class="nav-collapse">
+          <div class="nav-collapse collapse">
             <%= render 'layouts/navigation' %>
           </div>
         </div>
