Reworked the help page navigation

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -252,17 +252,31 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 
 /* help */
 .help-links {
-  position: relative;
-  float: right;
+  width: auto;
+  margin-top: 20px;
   background-color: $white;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid $gray;
-  margin-top: 10px;
   @include rounded-corners;
   ul {
    list-style: none;
    margin: 0 0 10px 0;
    } 
+}
+.help-links > li > a {
+  border: 1px solid #e5e5e5;
+}
+.help-links.affix {
+  top: 46px;
+}
+.help-links .icon-chevron-right {
+  float: right;
+  opacity: .25;
+  margin-right: -6px;
+}
+.help-video {
+  width: 640px;
+  height: 360px;
 }
 
 .mobile-divider { 
@@ -270,18 +284,36 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   }
 
 /* responsive */
+
+@media (min-width: 1200px) {
+  .help-links {
+    width: 230px;
+  }
+}
+
 @media (max-width: 979px) {
   .navbar .brand{
-    width: 150px;
+    width: 145px;
   }
   .navbar .nav {
     margin: 7px 0 0 0;
   }
+  .help-links, .help-links.affix {
+    width: 140px;
+  }
 }
 
 @media (max-width: 767px) {
-  .overlay-corner{
-    width: 200px;
+  .help-links.affix {
+    position: static;
+    top: 0;
+  }
+  .help-links, .help-links.affix {
+    width: auto;
+  }
+  .help-video {
+    width: 448px;
+    height: 252px;
   }
   #main {
     padding-top: 20px;;
