--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -375,6 +375,13 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   }
 }
 
+@media (max-width: 320px) {
+  .help-video {
+    width: 300px;
+    height: 168px;
+  }
+}
+
 /* overlay - remove in production */
 .overlay-corner {
   position: absolute;
