--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,20 +17,20 @@
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', '<%= ENV["GOOGLE_TRACKING_ID"] %>']);
-      _gaq.push(['_trackPageview']);    
+      _gaq.push(['_trackPageview']);
       (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();   
+      })();
     </script>
     <% end -%>
   </head>
-  <% if url_for(:controller => :static_pages, :action => :help) %>
+  <% if url_for() == '/help' %>
   <body data-spy="scroll" data-target=".help-nav">
-  <% else -%>
+  <% else %>
   <body>
-  <% end -%>
+  <% end %>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
