typo fix and link change requested by Tom Evans and Jennifer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,8 +12,8 @@
     <div class="row trio-text">
       <div class="span4">
         <h4>Technicity</h4>
-        <%= link_to image_tag("FinalPerspective.jpg", :alt => "TechniCity on Coursera"), "https://www.coursera.org/course/techcity" %>
-        <p>This app was designed to support <a href="https://www.coursera.org/course/techcity">TechniCity</a>, a Coursera course taught by Jennifer Evans-Cowley and 
+        <%= link_to image_tag("FinalPerspective.jpg", :alt => "TechniCity on Coursera"), "https://class.coursera.org/techcity-001/class/index" %>
+        <p>This app was designed to support <a href="https://class.coursera.org/techcity-001/class/index">TechniCity</a>, a Coursera course taught by Jennifer Evans-Cowley and 
   Thomas W. Sanchez.</p>
       </div>
       <div class="span4">
