--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
     <ul class="dropdown-menu">
       <li><%= link_to 'Overview', about_path %></li>
       <li><%= link_to t('.help'), help_path %></li>
-      <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a></li>
+      <li><a href="https://class.coursera.org/techcity-001/class/index"><%= t '.technicity' %></a></li>
     </ul>
   </li>
   <li><%= link_to t('.public_studies'), studies_path %></li>
@@ -30,3 +30,27 @@
     <li><%= link_to t('.login'), new_user_session_path %></li>
   <% end %>
 </ul>
+
+
+
+<!-- OLD
+  <li class="dropdown">
+    <a href="/dashboard" class="dropdown-toggle" data-toggle="dropdown">Public Studies
+    <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/studies">Studies</a></li>
+      <li><a href="/imagesets">Image Sets</a></li>
+      <li><a href="/regions">Areas</a></li>
+    </ul>
+  </li>
+  <% if user_signed_in? %>
+    <li class="dropdown">
+
+    </li>
+  <% end %>
+
+
+</ul>
+<%= link_to "Sign up", new_user_registration_path %>
+-->
