Last Coursera link change

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
         <a target="_blank" href="mailto:eng-streetseen@osu.edu"><%= image_tag("email-50.png", :alt => "Email Us") %></a>
         <a target="_blank" href="http://www.facebook.com/OsuStreetSeen"><%= image_tag("FB-f-Logo__white_50.png", :alt => "Follow us on Facebook") %></a>
         <a target="_blank" href="http://twitter.com/OsuStreetSeen"><%= image_tag("twitter-bird-dark-50.png", :alt => "Follow us on Twitter") %></a>
-        <a target="_blank" href="https://www.coursera.org/course/techcity"><%= image_tag("coursera-square-50.png", :alt => "Visit Technicity on Coursera") %></a>
+        <a target="_blank" href="https://class.coursera.org/techcity-001/class/index"><%= image_tag("coursera-square-50.png", :alt => "Visit Technicity on Coursera") %></a>
      <p id="contact-text">Contact</p>
       </div>
   </div>
