Adjusted label boldness. Closes #180

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -75,6 +75,10 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     background-color: $darkred;
 }
 
+label {
+  font-weight: bold;
+}
+
 .btn-danger {
     background-color: $darkred;
     background-image: linear-gradient(to bottom, $midred, $darkred);
