--- a/app/views/studies/mine.html.erb
+++ b/app/views/studies/mine.html.erb
@@ -1,4 +1,4 @@
-<h1>My Research</h1>
+<h1>My Studies</h1>
 <% if @studies.empty? %>
   <p class="empty-text">You have not created any studies.</p>
 <% else %>
