--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,18 +1,18 @@
 <ul class="nav">
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      About
+      <%=t '.about' %>
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><%= link_to 'Overview', about_path %></li>
+      <li><%= link_to t('.overview'), about_path %></li>
       <li><%= link_to t('.help'), help_path %></li>
       <li><a href="https://class.coursera.org/techcity-001/class/index"><%= t '.technicity' %></a></li>
     </ul>
   </li>
-  <li><%= link_to t('.public_studies'), studies_path %></li>
+  <li><%= link_to t('.available_studies'), studies_path %></li>
   <% if user_signed_in? %>
-    <li><%= link_to t('.my_research'), url_for(:controller => "/studies", :action => "mine", :user_id => current_user.id) %></li>
+    <li><%= link_to t('.my_studies'), url_for(:controller => "/studies", :action => "mine", :user_id => current_user.id) %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         My Account
