updated tabs and survey edit form

--- a/app/views/studies/_analyze_header.html.erb
+++ b/app/views/studies/_analyze_header.html.erb
@@ -1,4 +1,4 @@
-<%= render 'header', :study => @study %>
+<%= render 'shared/header', :study => @study %>
 <p>
   <strong>Description</strong><br />
   <%= @study.description %>
