--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -1,4 +1,4 @@
-<%= render 'header', :study => @study %>
+<%= render 'shared/header', :study => @study %>
 
 <div style="float:left;width:400px;margin-right:40px;">
   <h2><span id="region_name_plain">Area: <%= @region.name %></span></h2>
