--- a/app/views/studies/vote.html.erb
+++ b/app/views/studies/vote.html.erb
@@ -1,5 +1,5 @@
 
-<%= render 'header', :study => @study %>
+<%= render 'shared/header', :study => @study %>
 <!-- <p>Todo: voting interface</p> -->
 
 <% if @study.active.nil? %>
