--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing survey</h1>
+<%= render 'shared/header', :study => @study %>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @survey %> |
-<%= link_to 'Back', surveys_path %>
+<%= render 'form_edit' %>
